adding sign in & sign up

--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -1,8 +1,3 @@
-.container { 
-    height: 1500px;
-    color: white;
-}
-
 ::-webkit-scrollbar {
     width:7px
 }
@@ -13,7 +8,7 @@
 
 
 ::-webkit-scrollbar-thumb {
-    background: linear-gradient(to bottom, #696CFF, #161B22);
-    background: -webkit-linear-gradient(to bottom, #696CFF, #161B22);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#696CFF', endColorstr='#161B22', GradientType=0);
+    background: linear-gradient(to bottom, #723FC8, #161B22);
+    background: -webkit-linear-gradient(to bottom, #723FC8, #161B22);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#723FC8', endColorstr='#161B22', GradientType=0);
 }
