--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -12,3 +12,22 @@
     background: -webkit-linear-gradient(to bottom, #723FC8, #161B22);
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#723FC8', endColorstr='#161B22', GradientType=0);
 }
+
+/* Standing.css */
+
+.standing-container {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+}
+
+.grid-background {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: transparent;
+    background-image: linear-gradient(transparent 2px, #fff 2px), linear-gradient(90deg, transparent 2px, #fff 2px);
+    background-size: 20px 20px; /* Adjust the size of the grid */
+}
