--- a/Frontend/src/Components/Modal/Modal.css
+++ b/Frontend/src/Components/Modal/Modal.css
@@ -1,7 +1,6 @@
 .modalBackground {
   width: 100vw;
   height: 100vh;
-  /* background-color: rgba(200, 200, 200); */
   position: fixed;
   display: flex;
   justify-content: center;
@@ -13,11 +12,12 @@
 }
 
 .modalContainer {
+  colro: white;
   width: 80%;
   height: 80%;
+  overflow:scroll;
   border-radius: 12px;
-  background-color: white;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  background-color: rgb(22,27, 34);
   display: flex;
   flex-direction: column;
   padding: 25px;
@@ -25,13 +25,16 @@
 
 .modalContainer .title {
   display: inline-block;
-  text-align: center;
-  margin-top: 10px;
+  color: white;
+  margin-top: 5px;
+  padding-bottom: 5px;
+  border-bottom: 1px solid white;
 }
 
 .titleCloseBtn {
   display: flex;
   justify-content: flex-end;
+  color: white;
 }
 
 .titleCloseBtn button {
@@ -40,24 +43,33 @@
   font-size: 25px;
   cursor: pointer;
 }
-
+.modalContainer .body-parent{
+  padding: 10px 0px;
+  border-bottom: 1px solid white;
+}
 .modalContainer .body {
   flex: 50%;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 1.7rem;
-  text-align: center;
+  color: white;
+  padding: 10px;
+  border-radius: 5px;
+  background-color: rgb(33, 38, 45);
+  height: 100%;
 }
 
 .modalContainer .footer {
   flex: 20%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
+  /* display: flex; */
+  color: white;
 
-.modalContainer .footer button {
+}
+.modalContainer .footer pre{
+  padding: 2px;
+  border-radius: 5px;
+  /* border: 1px solid gray; */
+  background-color: rgb(33, 38, 45);
+}
+/* .modalContainer .footer button {
   width: 150px;
   height: 45px;
   margin: 10px;
@@ -71,4 +83,4 @@
 
 #cancelBtn {
   background-color: crimson;
-}
+} */
