--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -3,12 +3,12 @@
 }
 
 ::-webkit-scrollbar-track{
-    background-color: #161B22;  
+    background-color: #E9ECEF;  
 }
 
 
 ::-webkit-scrollbar-thumb {
-    background-color: #723FC8;
+    background-color: #007AFF;
     /* background: linear-gradient(to bottom, #723FC8, #161B22); */
     /* background: -webkit-linear-gradient(to bottom, #723FC8, #161B22); */
     /* filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#723FC8', endColorstr='#161B22', GradientType=0); */
