--- a/Frontend/src/Pages/Profile/ProfileRightSide/ProfileOverview/CalenderHeatMap.css
+++ b/Frontend/src/Pages/Profile/ProfileRightSide/ProfileOverview/CalenderHeatMap.css
@@ -2,4 +2,4 @@
 .react-calendar-heatmap .color-scale-2 { fill: #8cc665; }
 .react-calendar-heatmap .color-scale-3 { fill: #44a340; }
 .react-calendar-heatmap .color-scale-4 { fill: #1e6823; }
-.react-calendar-heatmap .color-empty { fill: #010409; } /* Set color for empty cells */
+.react-calendar-heatmap .color-empty { fill: #EBEDF0; } /* Set color for empty cells */
