--- a/Frontend/src/Components/Modal/Modal.css
+++ b/Frontend/src/Components/Modal/Modal.css
@@ -17,7 +17,10 @@
   height: 80%;
   overflow:scroll;
   border-radius: 12px;
-  background-color: rgb(22,27, 34);
+  /* background-color: rgb(22,27, 34); */
+
+  background-color: rgb(247 247 247);
+  
   display: flex;
   flex-direction: column;
   padding: 25px;
@@ -25,16 +28,16 @@
 
 .modalContainer .title {
   display: inline-block;
-  color: white;
+  /* color: black; */
   margin-top: 5px;
   padding-bottom: 5px;
-  border-bottom: 1px solid white;
+  border-bottom: 1px solid black;
 }
 
 .titleCloseBtn {
   display: flex;
   justify-content: flex-end;
-  color: white;
+  /* color: white; */
 }
 
 .titleCloseBtn button {
@@ -45,42 +48,27 @@
 }
 .modalContainer .body-parent{
   padding: 10px 0px;
-  border-bottom: 1px solid white;
+  border-bottom: 1px solid black;
 }
 .modalContainer .body {
   flex: 50%;
   display: flex;
-  color: white;
+  /* color: white; */
   padding: 10px;
   border-radius: 5px;
-  background-color: rgb(33, 38, 45);
+  background-color: rgb(233 236 239);
+
   height: 100%;
 }
 
 .modalContainer .footer {
   flex: 20%;
-  /* display: flex; */
-  color: white;
+  /* color: white; */
 
 }
 .modalContainer .footer pre{
   padding: 2px;
   border-radius: 5px;
-  /* border: 1px solid gray; */
-  background-color: rgb(33, 38, 45);
-}
-/* .modalContainer .footer button {
-  width: 150px;
-  height: 45px;
-  margin: 10px;
-  border: none;
-  background-color: cornflowerblue;
-  color: white;
-  border-radius: 8px;
-  font-size: 20px;
-  cursor: pointer;
-}
+  background-color: rgb(233 236 239);
 
-#cancelBtn {
-  background-color: crimson;
-} */
+}
